--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,27 @@
-<textarea name="" [(ngModel)]="token" cols="30" rows="10"></textarea> <br />
-<button id="initProcess" (click)="openMF()">Enviar token</button>&nbsp;
-<button id="cleanToken" (click)="cleanToken()">Limpiar</button>
+<div class="container">
+  <div class="main">
+    <textarea name="" [(ngModel)]="token" cols="50" rows="10"></textarea> <br />
+  </div>
+  <div class="actions">
+    <button (click)="openMF('fdc-mf-validation')">Documentos</button>
+    <button (click)="openMF('fdc-mf-videosignature')">Video firma</button>
+    <button id="cleanToken" (click)="cleanToken()">Limpiar</button>
+  </div>
+</div>
 
 <fdc-mf-validation
-  *ngIf="token && url && active"
+  *ngIf="token && url && active && microfront === 'fdc-mf-validation'"
   [token]="token"
   [url]="url"
   (response)="response($event)"
   (close)="close($event)"
 >
 </fdc-mf-validation>
+<fdc-mf-videosignature
+  *ngIf="token && url && active && microfront === 'fdc-mf-videosignature'"
+  [token]="token"
+  [url]="url"
+  (response)="response($event)"
+  (close)="close($event)"
+>
+</fdc-mf-videosignature>
