--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,15 @@
+$ibk-color: rgb(0, 169, 79);
+
 .container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: 1rem;
   padding: 1rem;
+  margin: auto;
+  height: 100%;
+  width: 100%;
 }
 
 .container .actions {
@@ -10,7 +17,23 @@
   gap: 1rem;
 }
 
+.label {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 500;
+  margin-bottom: 0.5rem;
+}
+
 button {
   height: auto;
-  padding: 0.5rem;
+  padding: 0.9rem;
+  border: 1px;
+  border-radius: 5px;
+  color: white;
+  background-color: $ibk-color;
+}
+
+select {
+  height: auto;
+  padding: 0.7rem;
+  border-radius: 5px;
 }
