--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,34 @@
 <div class="container">
+  <select name="" id="" [(ngModel)]="ambient">
+    <option value="dev">DEV</option>
+    <option value="uat">UAT</option>
+  </select>
+
   <div class="main">
-    <textarea name="" [(ngModel)]="token" cols="50" rows="10"></textarea> <br />
+    <!-- <div class="label">Ingresar token:</div> -->
+    <textarea
+      name=""
+      [(ngModel)]="token"
+      cols="70"
+      rows="15"
+      placeholder="Ingresar token"
+      style="
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        padding: 0.2rem;
+      "
+    ></textarea>
+    <br />
   </div>
   <div class="actions">
     <button (click)="openMF('fdc-mf-validation')">Documentos</button>
     <button (click)="openMF('fdc-mf-videosignature')">Video firma</button>
-    <button id="cleanToken" (click)="cleanToken()">Limpiar</button>
+    <button
+      id="cleanToken"
+      (click)="cleanToken()"
+      style="background-color: grey"
+    >
+      Limpiar
+    </button>
   </div>
 </div>
 
